--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"      
     />
 
-    <link rel="stylesheet" href="src/magnific-popup.css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" />
   </head>
 
   <body>
-    <div id="app"></div>
+    <a class="image-link" href="images/image01.jpg">Open popup</a>
+
+    <div class="parent-container">
+      <a href="images/image01.jpg">Open popup 1</a>
+      <a href="images/image02.jpg">Open popup 2</a>
+      <a href="images/image03.jpg">Open popup 3</a>
+    </div>
+
+
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
-    <script src="src/jquery.magnific-popup.js"></script>
+    <script src="js/jquery.magnific-popup.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="src/index.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
